# discordCppSdk

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp
lib/: CMakeLists.txt  README.txt
lib/win32-dynamic/lib/: discord-rpc.lib
lib/win64-dynamic/lib/: discord-rpc.lib
source/: CMakeLists.txt  ffi.h
